Changelog 0.8.0.3
-----------------
[SA-00438] extend facebook app
+ adjust the error messages
+ make Facebook popups configureable: on/off
+ new design
+ show messages from wall
+ show messages from news


Changelog 0.8.0.1
-----------------
[SA-00434] MediaPlayer: "add all" from the explorer doesn't not sort the files alphanumeric - so they end up totally mixed in the playlist
[SA-00432] Sally: add Desktop shortcut to the CFileBrowser
[SA-00433] MediaPlayer: explorer already remembers the last folder the explorer was in - should also remember the folder depth
[SA-00427] Sally: (multimedia) keyboard keys should be handled by sally, even when sally don't have the focus (can be turned on / off in the settings)
+ fixed some strange behavior
[SA-00429] SallyAPI: LPD3DXFONT DrawText Scrolling
[NO-TICKET] SallyAPI: changed the description field in the CAboutDialog from CLabelBox to CEditBox
[SA-00435] SallyAPI: ListView sorting of items
+ implement in the playlist of the mediaplayer
[SA-00439] SallyAPI: implement hold click
[SA-00445] SallyAPI: Sound should unmute if the volume controller is changed
[SA-00446] SallyAPI: dropdown box with many items does not scroll to the currently selected one
[SA-00443] MediaPlayer: if the playlist has few items, the history is not working correct
[SA-00447] MediaPlayer: if the playlist has few items, the history is not working correct
[SA-00393] MediaPlayer: play next selection in the palylist
[SA-00444] SallyAPI: Filebrowser: add different sorting possibilities (sort by name / sort by date)
[SA-00000] SallyAPI: UI Controls
+ added scrollbar to the CLabelBox
+ added SetFont() to CEditBox
+ rework the CFileBrowser control menu
[SA-00448] SallyAPI: use the temp directory for the XML amazon files
[SA-00449] SallyAPI: bring up the "is playing" only if it is not older than 10 min
[SA-00000] SallyAPI: UI Controls
+ scroll able Form
[SA-00170] SallyAPI: Advanced Keyboard
+ word suggestions from the app (implemented in the MediaPlayer search)